--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/lib/bootstrap/bootstrap.min.css">
+    <!-- Application CSS; path verified to match app/static/css/style.css -->
     <link rel="stylesheet" href="/static/css/style.css">
     {% block head %}
     {% if request.path == '/tab/1' %}
@@ -56,8 +58,9 @@
         {% block content %}{% endblock %}
     </div>
 
+    <!-- Bootstrap JS bundle -->
     <script src="/static/lib/bootstrap/bootstrap.bundle.min.js"></script>
-    <!-- Retaining htmx.min.js for potential use in other tabs; remove if confirmed unused -->
+    <!-- HTMX for potential use in other tabs; verify app/static/js/htmx.min.js exists; remove if confirmed unused -->
     <script src="/static/js/htmx.min.js"></script>
     {% block scripts %}
         {% if request.path == '/tab/1' %}
