--- a/app/templates/_category_rows.html
+++ b/app/templates/_category_rows.html
@@ -30,7 +30,11 @@
     <td colspan="7">
         <div id="common-{{ category.category | lower | replace(' ', '_') }}" 
              class="expandable collapsed common-level" 
-             style="display: none; opacity: 0; transition: opacity 0.7s ease-in-out;"></div>
+             style="display: none; opacity: 0; transition: opacity 0.7s ease-in-out;">
+            <select class="subcategory-select form-control" data-category="{{ category.category | urlencode | replace('\'', '\\\'') | replace('\"', '\\\"') }}" onchange="loadCommonNames(this)">
+                <option value="">Select a subcategory</option>
+            </select>
+        </div>
     </td>
 </tr>
 {% endfor %}
