--- a/app/templates/_category_rows.html
+++ b/app/templates/_category_rows.html
@@ -13,13 +13,6 @@
     <td>{{ category.items_available }}</td>
     <td>
         <div class="btn-group">
-            <button class="btn btn-sm btn-secondary expand-btn" 
-                    data-category="{{ category.category }}" 
-                    data-target-id="common-{{ category.category | lower | replace(' ', '_') }}"
-                    data-expanded="false">Expand</button>
-            <button class="btn btn-sm btn-secondary collapse-btn" 
-                    data-collapse-target="common-{{ category.category | lower | replace(' ', '_') }}" 
-                    style="display:none;">Collapse</button>
             <button class="btn btn-sm btn-info print-btn" 
                     data-print-level="Category" 
                     data-print-id="category-table">Print</button>
@@ -28,13 +21,7 @@
 </tr>
 <tr>
     <td colspan="7">
-        <div id="common-{{ category.category | lower | replace(' ', '_') }}" 
-             class="expandable collapsed common-level" 
-             style="display: none; opacity: 0; transition: opacity 0.7s ease-in-out;">
-            <select class="subcategory-select form-control" data-category="{{ category.category | urlencode | replace('\'', '\\\'') | replace('\"', '\\\"') }}" onchange="loadCommonNames(this)">
-                <option value="">Select a subcategory</option>
-            </select>
-        </div>
+        <div id="common-{{ category.category | lower | replace(' ', '_') }}" class="common-level"></div>
     </td>
 </tr>
 {% endfor %}
